[package]
name = "librockdis_sys"
version = "0.1.0"
edition = "2018"
build = "build.rs"
links = "rockdis"

[dependencies.rocksdb]
git = "https://github.com/tikv/rust-rocksdb.git"
features = ["encryption", "static_libcpp"]
branch = "tikv-5.2"

[build-dependencies]
cc = "1.0.3"
cmake = "0.1"
bindgen = { version = "0.57", default-features = false, features = ["runtime"] }
